--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install sphinx ghp-import
+        pip install sphinx.ext.autodoc sphinx.ext.napoleon sphinx.ext.autosummary sphinx_autodoc_typehints nbsphinx sphinx.ext.mathjax sphinxcontrib.bibtex
 
     - name: Build documentation
       run: |
