--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install sphinx ghp-import
-        pip install sphinx_autodoc_typehints nbsphinx sphinxcontrib-bibtex
+        pip install sphinx_rtd_theme sphinx_autodoc_typehints nbsphinx sphinxcontrib-bibtex
 
     - name: Build documentation
       run: |
