--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Deploy to GitHub Pages
       run: |
-        ghp-import -n -p -f docs/_build/html
+        ghp-import -n -p -f docs/build/html
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
